--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-certifi==2020.12.5
-chardet==4.0.0
-idna==2.10
-pyTelegramBotAPI==4.9.0
-requests==2.28.2
-telebot==0.0.4
-urllib3==1.26.14
-Dispatcher==1.0
-aiogram==2.24
-googletrans~=3.0.0
+idna~=2.10
+pyTelegramBotAPI~=4.9.0
+requests~=2.28.2
+telebot~=0.0.4
+urllib3~=1.26.14
