--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   web:
     build: .
-    image: ${IMAGE_NAME}
+    image: ${IMAGE_NAME}:v1
     container_name: ${CONTAINER_NAME}
     command: python main.py
     ports:
