--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-idna~=2.10
+idna~=3.4
 pyTelegramBotAPI~=4.9.0
 requests~=2.28.2
 telebot~=0.0.4
 urllib3~=1.26.14
 googletrans~=3.0.0
+beautifulsoup4~=4.11.1
+lxml~=4.9.2
